Inclusão da logo

--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,13 @@ b, strong {
   max-width: 970px;
   z-index: 2000;
 }
+.img-logo {
+  width: 50%;
+  max-width: 50%;
+  padding: 0;
+  margin: 0;
+  }
+
 .alert-dismissable .close, .alert-dismissible .close {
   top: 0;
 }
