--- a/css/framework.css
+++ b/css/framework.css
@@ -633,6 +633,7 @@ input[type=radio] + label:before {
 }
 .logo.color-white {
   color: #fff;
+  padding-left: 0.2em;
 }
 /* Navigation Mobile */
 .navigation_mobile {
