Troca de ícones Diferencias e ajuste de colres de hovers e títulos

--- a/css/framework.css
+++ b/css/framework.css
@@ -9530,7 +9530,7 @@ input[type=radio] + label:before {
   color: #1e0e62;
 }
 .color-main.link:hover {
-  color: #391bbb;
+  color: #a111a1;
 }
 .color-heading {
   color: #919dab;
