--- a/css/framework.css
+++ b/css/framework.css
@@ -9527,7 +9527,7 @@ input[type=radio] + label:before {
   color: #d81862;
 }
 .color-main {
-  color: #1e0e62;
+  color: #650065;
 }
 .color-main.link:hover {
   color: #a111a1;
