--- a/css/style.css
+++ b/css/style.css
@@ -123,12 +123,14 @@ color: #650065;
 }
     
 .img-logo {
-  width: 50%;
-  max-width: 50%;
+  position: absolute;
+  margin-top: -2%;
   padding: 0;
-  margin: 0;
 }
 
+.col-md-10 {
+  margin-top:6px;
+}
 .check-icon {
 transform: scaleX(-0.9) rotate(-40deg);
 display: inline-block;
@@ -140,6 +142,28 @@ color:#a111a1;
 .differentials-icons{
 width: 4em;
 height: 4em;  
+}
+
+.faixa-branca {
+  background-color: white;
+  width: 100%; 
+  height: 7em; 
+  position: absolute;
+  top: 20px; 
+  opacity: .5;
+  display: none;
+}
+
+.faixa-branca.aos-init.aos-animate{
+  opacity: 0.5;
+}
+
+.faixa-branca {
+}
+@media(min-width: 1217px) {
+.faixa-branca {
+display: block;
+}
 }
 
 .alert {
