--- a/css/style.css
+++ b/css/style.css
@@ -123,8 +123,7 @@ color: #650065;
 }
     
 .img-logo {
-  width: 50%;
-  max-width: 50%;
+  width: 60px;
   padding: 0;
   margin: 0;
 }
@@ -141,6 +140,24 @@ color:#a111a1;
 width: 4em;
 height: 4em;  
 }
+
+.col-md-1 {
+  background-color: white;
+  text-align: center;
+  position: absolute;
+  margin-top: -12em;
+  margin-left: 16em;
+  padding-top: 2em;
+  max-width: 8em;
+  border-radius: 0px 0px 20px 20px;
+  }
+  
+  @media(min-width: 1501px) {
+    .col-md-1 {
+    display: block;
+
+    }
+    }
 
 .alert {
   display: none;
