--- a/css/style.css
+++ b/css/style.css
@@ -123,9 +123,10 @@ color: #650065;
 }
     
 .img-logo {
-  width: 70px;
+  width: 78px;
   padding: 0;
-  margin: 0;
+  margin-top: -26px;
+
 
 }
 
