Correção de links do nav menu; troca fundo políticas de privacidade; troca de logo para ecrã mobile

--- a/css/framework.css
+++ b/css/framework.css
@@ -9584,7 +9584,7 @@ input[type=radio] + label:before {
   background-color: #fff !important;
 }
 .bg-dark {
-  background-color: #650065 !important;
+  background-color: #930cda !important;
 }
 .bg-main {
   background-color: #1e0e62;
